[metadata]
name = ceph-ci-system
author = Xing Zhang
author-email = angeiv.zhang@gmail.com
summary = Ceph CI System
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://ceph-ci.readthedocs.io/zh/latest/
project_urls =
    Bug Tracker = https://github.com/angeiv/ceph-ci-system-docs/issues
    Documentation = https://ceph-ci.readthedocs.io/zh/latest/
    Source Code = https://ceph-ci.readthedocs.io/zh/latest/
license = Apache-2
classifier =
    Environment :: Sphinx
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[build_sphinx]
all_files = 1
build-dir = build
source-dir = source
warning-is-error = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
